refactor: apply clean code, API contract, and security improvements
Clean Code:
- Remove deprecated *PageResult wrappers (BoardPageResult, PostPageResult, UniversityPageResult)
- Replace Object[] JPA casting with Projection interfaces (ReviewCountProjection, ReviewAvgRatingProjection)
- Extract blankToNull helper to eliminate duplication in persistence adapter
- Rename single-letter variables (eu→university, v→review) for clarity

API Contract:
- Move GET /boards/{id}/posts from PostApiController to BoardApiController (correct sub-resource placement)
- Add pagination to GET /posts/{id}/comments (page/size params with @Min/@Max validation)
- Change POST /posts/{id}/reactions response from 201 to 204 (no resource created)
- Add paginated comment loading to LoadPostPort, PostPersistenceAdapter, PostQueryService
- Add machine-readable error codes to ErrorResponse (DOMAIN_ERRORTYPE format)

Security:
- Add @Size constraints on keyword/countryCode query params to prevent oversized input
- Add @Email validation on LoginRequest
- Add issuer/audience claims to JWT (iss=ovlo, aud=ovlo-api) and enforce on validation
- Add account-level rate limiting in addition to IP-based (checkLoginRate)
- Restrict security log level to WARN in application.yml

Tests:
- PostQueryServiceTest: restructure with @Nested, add listByBoard and getComments pagination tests (10 tests)
- JwtTokenProviderImplTest: restructure with @Nested, add iss/aud rejection tests (8 tests)
- BoardQueryServiceTest, UniversityQueryServiceTest: align with updated port signatures

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>